logs/django-concepts.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/concepts'...
Listing './lib/python3.5/site-packages/concepts/static'...
Listing './lib/python3.5/site-packages/concepts/static/concepts'...
Listing './lib/python3.5/site-packages/concepts/templates'...
Listing './lib/python3.5/site-packages/concepts/templates/admin'...
Listing './lib/python3.5/site-packages/concepts/templates/admin/concepts'...
Listing './lib/python3.5/site-packages/concepts/templates/concepts'...
Listing './lib/python3.5/site-packages/concepts/templatetags'...
Compiling './lib/python3.5/site-packages/concepts/templatetags/concept_related_items.py'...
***   File "./lib/python3.5/site-packages/concepts/templatetags/concept_related_items.py", line 93
    except NoReverseMatch, err:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/concepts/tests.py'...
***   File "./lib/python3.5/site-packages/concepts/tests.py", line 50
    print f.concepts.all()
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_concepts-0.5.egg-info'...
Listing './lib/python3.5/site-packages/django_taggit-0.9.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/taggit'...
Listing './lib/python3.5/site-packages/taggit/locale'...
Listing './lib/python3.5/site-packages/taggit/locale/de'...
Listing './lib/python3.5/site-packages/taggit/locale/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/taggit/locale/en'...
Listing './lib/python3.5/site-packages/taggit/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/taggit/locale/he'...
Listing './lib/python3.5/site-packages/taggit/locale/he/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/taggit/locale/nl'...
Listing './lib/python3.5/site-packages/taggit/locale/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/taggit/locale/ru'...
Listing './lib/python3.5/site-packages/taggit/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/taggit/tests'...
Listing './share'...
Listing './share/python-wheels'...
